--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "podt-trie"
+name = "patricia-trie"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 sha2 = "0.10.8"
-serde = {version="1", default-features=false, features=["derive"]}
+serde = { version = "1", default-features = false, features = ["derive"] }
 bincode = "1.3.3"
