--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 sha2 = "0.10.8"
 serde = { version = "1", default-features = false, features = ["derive"] }
 bincode = "1.3.3"
+
+[dev-dependencies]
+rand = "0.8.5"
