--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 sha2 = "0.10.8"
 serde = { version = "1", default-features = false, features = ["derive"] }
 bincode = "1.3.3"
+rusqlite = { version = "0.32", optional = false }
 
 [dev-dependencies]
 rand = "0.8.5"
@@ -14,4 +15,5 @@ indicatif = "0.17.8"
 colored = "2.1.0"
 
 [features]
+#sqlite = ["rusqlite"]
 stress-test = []
