--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ sha2 = "0.10.8"
 serde = { version = "1", default-features = false, features = ["derive"] }
 bincode = "1.3.3"
 rusqlite = { version = "0.32" }
+anyhow = "1.0"
 
 [dev-dependencies]
 rand = "0.8.5"
